fixed that phone alignment problem

--- a/public/stylesheets/main_new.css
+++ b/public/stylesheets/main_new.css
@@ -148,6 +148,10 @@ img#gif-animation.hero-animation {
 	margin-right: auto;
 }
 
+#splash .animation {
+	display: inline-block;
+}
+
 #splash .animation img {
 	margin-left: auto;
 }
